DB-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-customer
spec:
  serviceName: mysql-customer
  replicas: 1
  selector:
    matchLabels:
      app: mysql-customer
  template:
    metadata:
      labels:
        app: mysql-customer
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: init-script
        configMap:
          name: mysql-init-scripts

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-customer
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-customer
