deployment-customer-microsvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: 36620759amara/customer-services
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  annotations:
    konghq.com/plugins: proxy-cache-example
spec:
  selector:
    app: customers-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
