deployment-vets-microsvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: 36620759amara/vets-service
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  annotations:
    konghq.com/plugins: proxy-cache-example
spec:
  selector:
    app: vets-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
