deployment-visits-microsvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - name: visits-service
          image: 36620759amara/visits-service
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
spec:
  selector:
    app: visits-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: LoadBalancer
