Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-keiken-ingress
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /owners
            pathType: ImplementationSpecific
            backend:
              service:
                name: customers-service
                port:
                  number: 8081
          - path: /vets
            pathType: ImplementationSpecific
            backend:
              service:
                name: vets-service
                port:
                  number: 8083
